feat: add message reactions to the native API
